examples/failing/Import.purs
module Module where

  import UndefinedModule
